[package]
name = "cmos-rtc"
version = "0.1.2"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "'CMOS' is a tiny bit of very low power static memory that lives on the same chip as the Real-Time Clock (RTC)"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/CMOS"
repository = "https://github.com/deadblackclover/CMOS"
keywords = ["cmos", "rtc", "no_std"]
categories = ["no-std", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.10"
